# blog_network

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: manage.py
app/about/tests/: test_views.py
app/core/: tests.py  views.py
app/core/block/: middleware.py
app/core/context_processors/: year.py
app/core/markdown/: utils.py
app/posts/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
app/posts/migrations/: 0001_initial.py  0005_auto_20230116_1541.py  0006_auto_20230116_1544.py  0009_auto_20230116_1654.py  0010_auto_20230119_1016.py  0011_auto_20230129_1704.py  0013_post_image.py  0019_auto_20230228_1507.py  0020_alter_post_options_alter_comment_id_alter_follow_id_and_more.py
app/posts/tests/: test_forms.py  test_urls.py  test_views.py
app/templates/: base_card.html  base_form.html
app/templates/about/: tech.html
app/templates/core/: 403.html  404.html
app/templates/includes/: footer.html  header.html  logout_link.html  nav_link.html
app/templates/posts/: group_list.html  post_detail.html
app/templates/posts/includes/: comments.html  post.html
app/templates/users/: logged_out.html  password_change.html  password_reset.html  signup.html
app/users/: forms.py  urls.py
app/users/tests/: test_forms.py  test_urls.py  test_views.py
app/yatube/: asgi.py  settings.py  wsgi.py
tests/: conftest.py  test_about.py  test_auth_urls.py  test_comment.py  test_create.py  test_follow.py  test_homework.py  test_paginator.py  test_post.py  test_profile.py  utils.py
tests/fixtures/: fixture_data.py  fixture_user.py
yatube/about/: tests.py
yatube/about/tests/: test_urls.py  test_views.py
yatube/core/: tests.py
yatube/core/markdown/: utils.py
yatube/posts/: admin.py  forms.py  models.py  urls.py  views.py
yatube/posts/migrations/: 0002_auto_20230115_1745.py  0003_auto_20230115_2225.py  0004_auto_20230115_2229.py  0007_auto_20230116_1546.py  0008_auto_20230116_1611.py  0012_auto_20230130_1228.py  0014_comment.py  0015_auto_20230222_1731.py  0016_follow.py  0017_auto_20230222_2310.py  0018_auto_20230224_1221.py
yatube/posts/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
yatube/templates/: base.html  base_card.html  base_form.html
yatube/templates/about/: author.html
yatube/templates/core/: 403csrf.html  500.html
yatube/templates/includes/: footer.html  form_fields.html  header.html  nav_link.html  post.html
yatube/templates/posts/: create_post.html  follow.html  group_list.html  index.html  post_delete_confirm.html  post_detail.html  profile.html
yatube/templates/posts/includes/: comments.html  paginator.html  post.html
yatube/templates/users/: logged_out.html  login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
yatube/users/: forms.py  urls.py
yatube/users/tests/: test_forms.py  test_urls.py  test_views.py
yatube/yatube/: settings.py  urls.py
